unpackaged/main/default/objects/Vehicle_Allocation__c/Vehicle_Allocation__c.object-meta.xml
<CustomObject>
    <description>A Junction Object between &#39;Vehicle&#39; and &#39;Service Resource&#39; Objects.</description>
    <label>Vehicle Allocation</label>
    <nameField>
        <displayFormat>VEHALC-{0000}</displayFormat>
        <label>VEHALC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>