unpackaged/main/default/objects/Vehicle_Allocation__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <formula>Service_Resource__r.Mobile_No__c</formula>
    <label>Contact Number</label>
    <type>Text</type>
</CustomField>