unpackaged/main/default/objects/Vehicle_Allocation__c/fields/Internal_Staff__c.field-meta.xml
<CustomField>
    <fullName>Internal_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vehicle_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>