unpackaged/main/default/objects/Vehicle_Allocation__c/fields/Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Reg_No__c</fullName>
    <formula>Vehicle__r.Reg_No__c</formula>
    <label>Reg No</label>
    <type>Text</type>
</CustomField>