unpackaged/main/default/objects/Vehicle_Allocation__c/fields/Reserved_For__c.field-meta.xml
<CustomField>
    <fullName>Reserved_For__c</fullName>
    <label>Reserved For</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>