unpackaged/main/default/objects/Vehicle_Allocation__c/validationRules/End_Date_greater_than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_greater_than_Start_Date</fullName>
    <active>false</active>
    <errorConditionFormula>End_date__c &lt; Start_date__c</errorConditionFormula>
    <errorDisplayField>End_date__c</errorDisplayField>
    <errorMessage>The End date must be greater than the Start date</errorMessage>
</ValidationRule>