unpackaged/main/default/objects/Vehicle_Allocation__c/validationRules/Start_Date_less_than_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_less_than_End_Date</fullName>
    <active>false</active>
    <errorConditionFormula>Start_date__c &gt; End_date__c</errorConditionFormula>
    <errorDisplayField>Start_date__c</errorDisplayField>
    <errorMessage>The Start date must be less than the End date</errorMessage>
</ValidationRule>