unpackaged/main/default/objects/Vehicle_Allocation__c/validationRules/Start_Date_should_not_be_in_the_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_should_not_be_in_the_past</fullName>
    <active>false</active>
    <errorConditionFormula>Start_date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Start_date__c</errorDisplayField>
    <errorMessage>The Start date must be equal or greater than today</errorMessage>
</ValidationRule>