unpackaged/main/default/objects/Vehicle_Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Reg_No__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Service_Resource__c</columns>
    <columns>Internal_Staff__c</columns>
    <columns>Reserved_For__c</columns>
    <columns>Start_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>